--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">DynamicFeature</string>
-    <string name="title_export_report">Exportar Relatório</string>
     <string name="menu_item_title_export">Exportar</string>
     <string name="title_exportpdf">ExportPdf</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
